# blink

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  release.yml
crates/blink-analyzer/: Cargo.toml
crates/blink-analyzer/src/: dependencies.rs  duplicates.rs  graph.rs  health.rs  lib.rs  lockfile.rs  recommendations.rs  registry.rs  report.rs  security.rs  size.rs  tests.rs  usage.rs  version.rs
crates/blink-cache/: Cargo.toml
crates/blink-cache/src/: analysis_cache.rs  entry.rs  error.rs  global.rs  lib.rs  store.rs  tests.rs
crates/blink-cli/: Cargo.toml
crates/blink-cli/src/: analysis.rs  cli.rs  errors.rs  indexing.rs  main.rs  proc.rs  ui.rs
crates/blink-cli/src/commands/: analyze.rs  benchmark.rs  build.rs  check.rs  ci.rs  clean.rs  completions.rs  config_audit.rs  context.rs  dashboard.rs  deps.rs  docs.rs  doctor.rs  duplicates.rs  env.rs  explain.rs  export.rs  filesystem.rs  health.rs  hotspots.rs  index.rs  init.rs  inspect.rs  map.rs  mod.rs  optimize.rs  plugins.rs  query.rs  recommend.rs  report.rs  run.rs  scan.rs  search.rs  security.rs  setup.rs  tasks.rs  watch.rs
crates/blink-context/: Cargo.toml
crates/blink-context/src/: build.rs  explain.rs  imports.rs  lib.rs  model.rs  tests.rs
crates/blink-core/: Cargo.toml
crates/blink-core/src/: config.rs  detector.rs  error.rs  lib.rs  project.rs  tests.rs
crates/blink-dashboard/: Cargo.toml
crates/blink-dashboard/src/: app.rs  lib.rs  tests.rs  ui.rs
crates/blink-export/: Cargo.toml
crates/blink-export/src/: lib.rs  markdown.rs  mermaid.rs  tests.rs  yaml.rs
crates/blink-index/: Cargo.toml
crates/blink-index/src/: error.rs  index.rs  lib.rs  record.rs  symbols.rs  tests.rs
crates/blink-parser/: Cargo.toml
crates/blink-parser/src/: dependency.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  tests.rs
crates/blink-plugin/: Cargo.toml
crates/blink-plugin/src/: discovery.rs  error.rs  install.rs  lib.rs  run.rs
crates/blink-query/: Cargo.toml
crates/blink-query/src/: lib.rs  tests.rs
crates/blink-report/: Cargo.toml
crates/blink-report/src/: bar.rs  html.rs  issues.rs  json.rs  label.rs  lib.rs  markdown.rs  table.rs
crates/blink-server/: Cargo.toml
crates/blink-server/src/: dev_server.rs  error.rs  lib.rs  placeholder.html  tests.rs  watcher.rs
crates/blink-workflow/: Cargo.toml
crates/blink-workflow/src/: clean.rs  config_audit.rs  doctor.rs  duplicates.rs  env.rs  filesystem.rs  fs_util.rs  git.rs  lib.rs  optimize.rs  tasks.rs  tests.rs
docs/: FEATURE_AUDIT.md  WEBSITE_DATA.md  analysis.md  architecture.md  cli.md  configuration.md  context-engine.md  getting-started.md  plugins.md  roadmap.md
docs/planning/: phase-5-8-vision.md
examples/react-app/: package.json  tsconfig.json
examples/react-app/src/: App.tsx
examples/rust-crate/: Cargo.toml
examples/rust-crate/src/: main.rs
src/: lib.rs
tests/: cli_tests.rs  python_detection.rs  react_detection.rs  rust_detection.rs
tests/fixtures/monorepo/: Cargo.toml
tests/fixtures/monorepo/crates/app/: Cargo.toml
tests/fixtures/monorepo/crates/app/src/: main.rs
tests/fixtures/monorepo/crates/lib/: Cargo.toml
tests/fixtures/monorepo/crates/lib/src/: lib.rs
tests/fixtures/node_project/: package.json
tests/fixtures/node_project/src/: index.js
tests/fixtures/python_project/: app.py
tests/fixtures/react_project/: package.json  tsconfig.json
tests/fixtures/react_project/src/: App.tsx
tests/fixtures/rust_project/: Cargo.toml
tests/fixtures/rust_project/src/: main.rs
website/: README.md  index.html
