[package]
name = "blink-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dependency graph analysis and project health reporting for Blink."
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blink-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
semver = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
