[package]
name = "blink-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Serializes Blink's project context graph to JSON, YAML, Markdown, and Mermaid."
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blink-context = { workspace = true }
serde_json = { workspace = true }
