[package]
name = "blink-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic, local structured search over Blink's project context graph."
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blink-context = { workspace = true }
