[package]
name = "blink-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async dev server and file watcher for Blink."
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
